#83 fix checkstyle